[project]
name = "cachu"
version = "0.2.0"
description = "Flexible caching library with sync and async support for memory, file (SQLite), and Redis backends"
readme = "README.md"
license = "0BSD"
authors = [{ name = "bissli" }]
requires-python = ">=3.10"
dependencies = [
    "dogpile.cache",
    "func-timeout",
]

[project.optional-dependencies]
async = ["aiosqlite"]
redis = ["redis>=4.2.0"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "redis>=4.2.0",
    "testcontainers[redis]",
    "aiosqlite",
]

[project.urls]
Repository = "https://github.com/bissli/cachu.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "redis: marks tests requiring Redis (deselect with '-m \"not redis\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
