[project]
name = "cachu"
version = "0.3.1"
description = "Flexible caching library with sync and async support for memory, file (SQLite), and Redis backends"
readme = "README.md"
license = "0BSD"
authors = [{ name = "bissli" }]
requires-python = ">=3.10"
dependencies = [
  "func-timeout",
]

[project.optional-dependencies]
async = ["aiosqlite"]
redis = ["redis>=4.2.0"]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "redis>=4.2.0",
  "testcontainers[redis]",
  "aiosqlite",
]

[project.urls]
Repository = "https://github.com/bissli/cachu.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
  "redis: marks tests requiring Redis (deselect with '-m \"not redis\"')",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
  "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
